# icl-pipeline

./: .gitignore  README.md  bli.py  evaluate.py  experiment_config.py  lexicon.py  metrics.py  ppr.py  prompts.py  pyproject.toml  retrieval.py  run_baseline.py  web_app.py
data/: chagatai_long_dataset.csv  chagatai_sentence_list.txt  chagatai_sentences_only.csv  chagatai_wide_dataset.csv  chagatai_words_only.csv  dev.csv  test.csv  test_icl.csv  train.csv  train_icl.csv
docs/: build_graph_icl_docx.py  graph_icl_detailed_explanation.md  graph_icl_pipeline_report.docx
templates/: base.html  index.html  logs.html  prompts.html  requests.html  run.html  table.html
tests/: test_core.py
