[project]
name = "icl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "bert-score>=0.3.13",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "notebook>=7.5.6",
    "numpy>=2.4.5",
    "openai>=2.37.0",
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "rank-bm25>=0.2.2",
    "ruff>=0.15.13",
    "sacrebleu>=2.6.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.47.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
